option text shadow

--- a/QuickPollUI/Components/HomeCards.razor
+++ b/QuickPollUI/Components/HomeCards.razor
@@ -23,7 +23,7 @@
                 <p> Enter your poll id, then click "Find" to navigate to your poll.</p>
                 <input class="id-input" @bind="@pollId" @bind:event="oninput" />
             </div>
-            <a @onclick="FindAPoll" class="nav-btn-card" type="button">Find</a>
+            <a @onclick="FindAPoll" class="nav-btn-card" type="button">Find Poll</a>
         </BackFace>
     </HomeCard>
 
