--- a/QuickPollUI/Components/PollDetails.razor
+++ b/QuickPollUI/Components/PollDetails.razor
@@ -130,10 +130,11 @@
         color: #aaa;
     }
 
-
     .option-text {
         font-weight: 700;
         font-family: 'News Cycle', sans-serif;
+        color: #fff;
+        text-shadow: 0 1px 1px #000, 0 1px 2px #000, 0 1px 3px #000, 0 1px 4px #000, 0 1px 5px #000, 0 1px 6px #000, 0 1px 7px #000;
     }
 
     .percent-text {
