--- a/QuickPollUI/Pages/PollDetailsPage.razor
+++ b/QuickPollUI/Pages/PollDetailsPage.razor
@@ -155,6 +155,8 @@
     .option-text {
         font-weight: 700;
         font-family: 'News Cycle', sans-serif;
+        color: #fff;
+        text-shadow: 1px 2px 1px #000, 1px 2px 2px #000, 1px 2px 3px #000, 1px 2px 4px #000;
     }
 
     .percent-text {
