--- a/QuickPollUI/Components/PollListComponent.razor
+++ b/QuickPollUI/Components/PollListComponent.razor
@@ -5,7 +5,7 @@
     @foreach (var poll in PollsToDisplay)
     {
         <CascadingValue Value="poll">
-            <PollDetails  />
+            <PollDetailsComponent  />
         </CascadingValue>
     }
 
