--- a/QuickPollUI/Shared/NoAuth.razor
+++ b/QuickPollUI/Shared/NoAuth.razor
@@ -11,5 +11,5 @@
 
     private void ShowLoginModal(MouseEventArgs mouseArgs) =>
         ModalWrapperComponent.ShowModal(
-            mouseArgs, typeof(Login), new Dictionary<string, object> { }, true);
+            mouseArgs, typeof(LoginComponent), new Dictionary<string, object> { }, true);
 }
