timer position fix, userCreated polls feature

--- a/QuickPollUI/Components/CountDownTimerComponent.razor
+++ b/QuickPollUI/Components/CountDownTimerComponent.razor
@@ -245,4 +245,10 @@ else
         }
     }
 
+    @@media(max-width: 300px) {
+        .time-unit-min::before {
+            transform: translateX(-2px);
+        }
+    }
+
 </style>
