--- a/QuickPollUI/Shared/Button.razor
+++ b/QuickPollUI/Shared/Button.razor
@@ -39,7 +39,7 @@
 
 <style>
 
-    .login-btn {
+    /*.login-btn {
         border: 2px solid transparent;
         background: #BF40BF;
         color: #fff;
@@ -51,7 +51,7 @@
             background: #fff;
             color: #BF40BF;
             border: 2px solid #BF40BF;
-        }
+        }*/
 
     .secondary {
         border: 2px solid transparent;
