--- a/QuickPollUI/Components/CreatePollFormComponent.razor
+++ b/QuickPollUI/Components/CreatePollFormComponent.razor
@@ -1,5 +1,6 @@
 ﻿@inject IPollManager _pollManager
 @inject ILogger<CreatePollFormComponent> _logger
+@inject IMongoUserData _userData
 @implements IDisposable
 
 <div class="form-div">
@@ -149,7 +150,9 @@
     {
         SetPollData();
 
-        await _pollManager.AddPoll(poll, LoggedInUser);
+        LoggedInUser.PollIds.Add(poll.PollId);
+        await _userData.ReplaceOneAsync(LoggedInUser.UserId, LoggedInUser, "UserId");
+        await _pollManager.AddPoll(poll);
 
         poll = new()
         {
