--- a/QuickPollUI/Shared/NavMenu.razor
+++ b/QuickPollUI/Shared/NavMenu.razor
@@ -2,21 +2,19 @@
 
 <div class="nav-menu">
     <div @onclick="NavigateHome" class="logo">Quick Poll</div>
-    <div class="">
-        <div class="">
-            <AuthorizeView>
-                <Authorized>
-                    <div class="nav-item">
-                        <a class="nav-btn" href="MicrosoftIdentity/Account/SignOut">Log Out</a>
-                    </div>
-                </Authorized>
-                <NotAuthorized>
-                    <div class="nav-item">
-                        <a class="nav-btn" href="MicrosoftIdentity/Account/SignIn">Log In</a>
-                    </div>
-                </NotAuthorized>
-            </AuthorizeView>
-        </div>
+    <div >
+        <AuthorizeView>
+            <Authorized>
+                <div class="nav-item">
+                    <a class="nav-btn" href="MicrosoftIdentity/Account/SignOut">Log Out</a>
+                </div>
+            </Authorized>
+            <NotAuthorized>
+                <div class="nav-item">
+                    <a class="nav-btn" href="MicrosoftIdentity/Account/SignIn">Log In</a>
+                </div>
+            </NotAuthorized>
+        </AuthorizeView>
     </div>
 </div>
 
